[gd_scene load_steps=23 format=3 uid="uid://db55dqikpqoof"]

[ext_resource type="Texture2D" uid="uid://d3u5e7iuyk16" path="res://assets/textures/char2_base.png" id="1_4b4qy"]
[ext_resource type="Script" path="res://objects/boss/boss.gd" id="2_tau8x"]
[ext_resource type="SpriteFrames" uid="uid://c6tnqwadci4ua" path="res://objects/boss/pupil_frames.tres" id="3_fgpyr"]
[ext_resource type="SpriteFrames" uid="uid://f3e2p2eukvp5" path="res://objects/boss/eye_frames.tres" id="4_uvnq0"]
[ext_resource type="SpriteFrames" uid="uid://c524gr8xkbw0w" path="res://objects/boss/mouth_frames.tres" id="5_nfts5"]
[ext_resource type="SpriteFrames" uid="uid://pwrnp4gmr0jd" path="res://assets/char2_fadeout.tres" id="6_nmpi0"]
[ext_resource type="AnimationLibrary" uid="uid://b0u81dbshlaik" path="res://objects/boss/animation_library.res" id="6_y80qs"]
[ext_resource type="Texture2D" uid="uid://b0f4ii8880exo" path="res://assets/textures/healthbar.png" id="7_68mms"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://b1jxfet7myqqm" path="res://objects/boss/blend_tree.tres" id="8_c2cxv"]
[ext_resource type="Texture2D" uid="uid://bmi05uwgklewy" path="res://assets/textures/bomb_explosion.png" id="8_ych7h"]
[ext_resource type="AudioStream" uid="uid://bwpc0aiomv2kb" path="res://assets/sfx/scream.ogg" id="9_4jvwq"]
[ext_resource type="AudioStream" uid="uid://svqdr5vwvgld" path="res://assets/sfx/bagguy_hit.ogg" id="10_0hmrm"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ht5n"]
animation = &"fade_in"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c7ovt"]
animation = &"fade_out"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vib6k"]
animation = &"fade_start"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vsq6y"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s7cq8"]
advance_mode = 2
advance_expression = "is_alive"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ivxpb"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8dq3f"]
advance_mode = 2
advance_expression = "not is_alive"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_akx2x"]
advance_mode = 2
advance_expression = "is_alive"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_784dr"]
states/Normal/node = ExtResource("8_c2cxv")
states/Normal/position = Vector2(479, 54)
states/Start/position = Vector2(43, 100)
states/fade_in/node = SubResource("AnimationNodeAnimation_3ht5n")
states/fade_in/position = Vector2(402, 159)
states/fade_out/node = SubResource("AnimationNodeAnimation_c7ovt")
states/fade_out/position = Vector2(652, 133)
states/fade_start/node = SubResource("AnimationNodeAnimation_vib6k")
states/fade_start/position = Vector2(196, 100)
transitions = ["Start", "fade_start", SubResource("AnimationNodeStateMachineTransition_vsq6y"), "fade_start", "fade_in", SubResource("AnimationNodeStateMachineTransition_s7cq8"), "fade_in", "Normal", SubResource("AnimationNodeStateMachineTransition_ivxpb"), "Normal", "fade_out", SubResource("AnimationNodeStateMachineTransition_8dq3f"), "fade_out", "fade_in", SubResource("AnimationNodeStateMachineTransition_akx2x")]
graph_offset = Vector2(-165, 11)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6abmh"]
particles_animation = true
particles_anim_h_frames = 16
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="Boss" type="Node2D"]
z_index = 250
position = Vector2(864, 128)
script = ExtResource("2_tau8x")

[node name="NextAttack" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="TossSource" type="Node2D" parent="."]
position = Vector2(0, 64)

[node name="FaceRig" type="Node2D" parent="."]

[node name="Base" type="Sprite2D" parent="FaceRig"]
texture = ExtResource("1_4b4qy")

[node name="Pupils" type="AnimatedSprite2D" parent="FaceRig"]
sprite_frames = ExtResource("3_fgpyr")

[node name="Eyes" type="AnimatedSprite2D" parent="FaceRig"]
sprite_frames = ExtResource("4_uvnq0")

[node name="Mouth" type="AnimatedSprite2D" parent="FaceRig"]
sprite_frames = ExtResource("5_nfts5")
animation = &"1"

[node name="FadeAnim" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("6_nmpi0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("6_y80qs")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_784dr")
anim_player = NodePath("../AnimationPlayer")
advance_expression_base_node = NodePath("..")
active = true
parameters/Normal/Blend2/blend_amount = 0
"parameters/Normal/Blend2 2/blend_amount" = 0
parameters/Normal/Blink/active = false
parameters/Normal/Blink/internal_active = false
parameters/Normal/Blink/request = 0
parameters/Normal/FinalBlend/blend_amount = 0
parameters/Normal/OneShot/active = false
parameters/Normal/OneShot/internal_active = false
parameters/Normal/OneShot/request = 0
parameters/Normal/emote_raise_eyes/active = false
parameters/Normal/emote_raise_eyes/internal_active = false
parameters/Normal/emote_raise_eyes/request = 0
parameters/Normal/wince/active = false
parameters/Normal/wince/internal_active = false
parameters/Normal/wince/request = 0

[node name="CannonTarget" type="Node2D" parent="."]
position = Vector2(-13, 0)

[node name="BlinkTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HealthBar" type="TextureRect" parent="."]
offset_left = -27.0
offset_top = 91.0
offset_right = 6.0
offset_bottom = 378.0
texture = ExtResource("7_68mms")
expand_mode = 1
stretch_mode = 1
flip_v = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_6abmh")
emitting = false
amount = 16
texture = ExtResource("8_ych7h")
emission_shape = 3
emission_rect_extents = Vector2(60, 60)
gravity = Vector2(0, 0)
scale_amount_min = 2.0
scale_amount_max = 2.0
anim_speed_min = 2.0
anim_speed_max = 5.0

[node name="ExplosionTimer" type="Timer" parent="CPUParticles2D"]
wait_time = 10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4jvwq")

[node name="OuchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_0hmrm")
bus = &"Sound_effects"

[connection signal="timeout" from="NextAttack" to="." method="_on_next_attack_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="CPUParticles2D/ExplosionTimer" to="CPUParticles2D" method="set_emitting" binds= [false]]
